Make sure fake buttons don't wrap
The .button class now has display: inline-block, which should fix the
issue with <a> buttons wrapping.

--- a/style/client.css
+++ b/style/client.css
@@ -359,6 +359,7 @@ select {
 	box-shadow: 0 1px 2px rgba(0,0,0,.2), inset 0 -1px 2px rgba(255,255,255,1);
 	border-radius: 5px;
 	font-family: Verdana, Helvetica, Arial, sans-serif;
+	display: inline-block;
 
 	/* default colors */
 	color: #222222;
